# oddjob

./: Makefile  README.md  oddjob-0.30-noclose.patch  oddjob-0.30-tests.patch  oddjob-0.30-umasks.patch  oddjob-0.31.5-check.patch  oddjob-0.31.5-noumask.patch  oddjob-0.31.5-pamdoc.patch  oddjob-0.31.5.tar.gz.sig  oddjob-init-status.patch  oddjob-umask.patch  oddjob.spec
src/: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  QUICKSTART  TODO  aclocal.m4  config.h.in  configure  configure.ac  oddjob.spec  oddjobconfig.dtd.in
src/doc/: Makefile.am  Makefile.in  oddjob.html  oddjob.xml.in
src/python/: Makefile.am  Makefile.in  oddjobmodule.c  sample.py
src/sample/: Makefile.am  Makefile.in  oddjob-sample.conf  oddjob-sample.conf.in  oddjobd-sample.conf.in
src/scripts/: Makefile.am  Makefile.in  oddjobd.in  oddjobd.service.in
src/src/: Makefile.am  Makefile.in  common.h  eightx.sh  mainloop.c  mainloop.h  make-i11nconf.sh.in  mkhomedir.c  mkhomedirfor.in  mkmyhomedir.in  oddjob-mkhomedir.conf.5.in  oddjob-mkhomedir.conf.in  oddjob.conf.5.in  oddjob.conf.in  oddjob.h  oddjob.pc.in  oddjob_dbus.c  oddjob_dbus.h  oddjob_request.1.in  oddjob_request.c  oddjobd-introspection.conf.5.in  oddjobd-local.conf.in  oddjobd-mkhomedir.conf.5.in  oddjobd-mkhomedir.conf.in  oddjobd.8.in  oddjobd.c  oddjobd.conf.5.in  oddjobd.conf.in  pam_oddjob_mkhomedir.8.in  pam_oddjob_mkhomedir.c  printenv.sh.in  reload.in  selinux.c  tenx.sh  util.c
src/tests/: Makefile.am  Makefile.in  printenv.sh  sanity.sh.in  test-oddjobd.conf.in  test-oddjobd.sh
src/tests/001/: description  expected_stdout
src/tests/002/: args  description  expected_stderr-0.2x  expected_stderr-0.3x
src/tests/003/: args  description  expected_stderr
src/tests/004/: args  description  expected_stderr
src/tests/005/: args  description  expected_stderr
src/tests/006/: args  description  expected_stdout  expected_stdout.in
src/tests/007/: args  description  expected_stdout  expected_stdout.in
src/tests/008/: args  description  expected_stdout  expected_stdout.in
src/tests/009/: args  description
src/tests/010/: args  description  expected_stderr
src/tests/011/: args  description
src/tests/012/: args  description  expected_stderr
src/tests/013/: args  description
src/tests/014/: args  description  expected_stderr
src/tests/015/: args  description
src/tests/016/: args  description
src/tests/017/: args  description  expected_stdout
src/tests/cmdparse/: Makefile.am  Makefile.in  cmdparse.c  test-cmdparse.sh
