SUBDIRS = cmdparse
EXTRA_DIST = sanity.sh.in printenv.sh test-oddjobd.conf.in test-oddjobd.sh \
	001 \
	002 \
	003 \
	004 \
	005 \
	006 \
	007 \
	008 \
	009 \
	010 \
	011 \
	012 \
	013 \
	014 \
	015 \
	016 \
	017

check: $(srcdir)/test-oddjobd.sh $(srcdir)/sanity.sh
	$(srcdir)/test-oddjobd.sh

CLEANFILES = test-oddjobd.log test-oddjobd.pid
